--- a/index1.html
+++ b/index1.html
@@ -6,17 +6,12 @@
   <title>Weather Widget</title>
 </head>
 <body>
-  <div> I am not a weather widget</div>
   <!-- The script will inject content here -->
   <div id="weatherWidget"></div>
-    <script> 
-        targetDivId = "weatherWidget"; 
-        // console.log("hello")
-    </script>
-
-    <script src= "./weatherWidget.js"></script>
-    <div> I am not a weather widget</div>
-
-
+    <!-- <script src= "https://raw.githubusercontent.com/arg224/Rise/main/weatherWidget.js"></script> -->
+    <div>
+      hello!
+    </div>
+    <script src= "https://arg224.github.io/Rise/weatherWidget.js" targetDivId="weatherWidget"></script>
     </body>
     </html>
