Not local anymore

--- a/index1.html
+++ b/index1.html
@@ -12,6 +12,7 @@
     <div>
       hello!
     </div>
-    <script src= "https://arg224.github.io/Rise/weatherWidget.js" targetDivId="weatherWidget"></script>
+    <!-- <script src= "https://arg224.github.io/Rise/weatherWidget.js" targetDivId="weatherWidget" ></script> -->
+    <script src="./weatherWidget.js" targetDivId="weatherWidgetx"></script>
     </body>
     </html>
