--- a/index1.html
+++ b/index1.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather Widget</title>
 </head>
+
 <body>
   <!-- The script will inject content here -->
   <div id="weatherWidget"></div>
-    <!-- <script src= "https://raw.githubusercontent.com/arg224/Rise/main/weatherWidget.js"></script> -->
-    <div>
-      hello!
-    </div>
-    <!-- <script src= "https://arg224.github.io/Rise/weatherWidget.js" targetDivId="weatherWidget" ></script> -->
-    <script src="./weatherWidget.js" targetDivId="weatherWidgetx"></script>
-    </body>
-    </html>
+
+  <!-- I used git to publish the page with my changes and then take the gist from it to be able to not have it run locally. -->
+  <!-- <script src= "https://arg224.github.io/Rise/weatherWidget.js" targetDivId="weatherWidget" ></script> -->
+  <script src="./weatherWidget.js" targetDivId="weatherWidgetx"></script>
+</body>
+
+</html>
