--- a/index1.html
+++ b/index1.html
@@ -11,9 +11,9 @@
   <!-- The script will inject content here -->
   <div id="weatherWidget"></div>
 
-  <!-- I used git to publish the page with my changes and then take the gist from it to be able to not have it run locally. -->
-  <!-- <script src= "https://arg224.github.io/Rise/weatherWidget.js" targetDivId="weatherWidget" ></script> -->
-  <script src="./weatherWidget.js" targetDivId="weatherWidgetx"></script>
+  <!-- I used git to publish the page with my changes and then take the gist to be able to not have it run locally. -->
+  <script src= "https://arg224.github.io/Rise/weatherWidget.js" targetDivId="weatherWidget" ></script>
+  <!-- <script src="./weatherWidget.js" targetDivId="weatherWidgetx"></script> -->
 </body>
 
 </html>
